all works with kafka